Improve device trees for several F&S boards
efusa7ul.dts:

- Fix check for display type.
- efusA7UL needs pattern 5 for lcdif in all board revisions.
- Rename "display" sub-node in lcdif to "lcd" to avoid a kernel
  warning with conflicting names; there is also a property with the
  name "display".

efusa9x.dts:

- Fix CONFIG_EFUSA9X_BOARD_REVISION macro name, the X was missing.
- Add CONFIG_EFUSA9X_PARALLEL_CAMERA and CONFIG_EFUSA9X_ANALOG_CAMERA
  to define presence of parallel or analog camera; use macros to enable
  nodes and IOMUXC settings for these cameras.
- Rename "display" sub-node in lcdif0 to "lcd" and in lcdif1 to "ldb"
  to avoid a kernel warning with conflicting names; there is already a
  property with the name "display" in each of these nodes.
- Move audmux settings in front of the ssi1 settings. These settings
  belong together.
- Move vadc settings directly behind csi2, these settings belong
  together.
- Replace pwm4 with pwm5 as this is the correct PWM for PWM_A. Enable
  this PWM by default.
- Fix setting of reset signal in IOMUXC for usdhc4. Activate usdhc4
  node for eMMC.
- Add some sanity checks, e.g. undefine configuration macros in
  combinations that are not allowed.

bema9x.dts:

- Rename "display" sub-node in lcdif to "lcd" to avoid a kernel
  warning with conflicting names; there is already a property with the
  name "display".

armstonea9qdl.dtsi

- Move audmux settings in front of the ssi1 settings. These settings
  belong together.
- Remove CONFIG_ARMSTONEA9_HDMI_AUDIO from audmux settings, HDMI audio
  does not need audmux.

armstonea9r2qdl.dtsi

- Move audmux settings in front of the ssi1 settings. These settings
  belong together.
- Remove CONFIG_ARMSTONEA9R2_HDMI_AUDIO from audmux settings, HDMI audio
  does not need audmux.

efusa9qdl.dtsi:

- Remove comment to check a pin; the pin is correct.
- Add reg_vref_3v3 for 3.3 system power; use it in node fec for
  phy-supply.
- Move audmux settings in front of the ssi1 settings. The

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -527,15 +527,6 @@
 	size = <CONFIG_ARMSTONEA9_CMA_SIZE>;
 };
 
-#if defined(CONFIG_ARMSTONEA9_SGTL5000_AUDIO) || \
-	defined(CONFIG_ARMSTONEA9_HDMI_AUDIO)
-&audmux {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_audmux_4>;
-	status = "okay";
-};
-#endif
-
 /* if you want to use the pmic controller you have to set the arm-supply and
  * the soc-supply to the regulator of the pmic. Look pfuze comment.*/
 #if 0
@@ -1031,6 +1022,12 @@
 #endif
 
 #ifdef CONFIG_ARMSTONEA9_SGTL5000_AUDIO
+&audmux {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_audmux_4>;
+	status = "okay";
+};
+
 &ssi1 {
 	fsl,mode = "i2s-slave";
 	status = "okay";
@@ -1456,8 +1453,7 @@
 		};
 #endif /* CONFIG_ARMSTONEA9_SGTL5000_AUDIO */
 
-#if defined(CONFIG_ARMSTONEA9_SGTL5000_AUDIO) || \
-	defined(CONFIG_ARMSTONEA9_HDMI_AUDIO)
+#if defined(CONFIG_ARMSTONEA9_SGTL5000_AUDIO)
 		pinctrl_audmux_4: audmux-4 {
 			fsl,pins = <
 				MX6QDL_PAD_SD2_DAT3__AUD4_TXC		0x130b0
