--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -217,7 +217,7 @@
 		reg_ldb_bl: backlight_ldb {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
-			gpio = <&gpio2 8 GPIO_ACTIVE_HIGH>;	//### TODO check pin
+			gpio = <&gpio2 8 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
@@ -518,15 +518,6 @@
 &cma {
 	size = <CONFIG_EFUSA9_CMA_SIZE>;
 };
-
-#if defined(CONFIG_EFUSA9_SGTL5000_AUDIO) || \
-	defined(CONFIG_EFUSA9_HDMI_AUDIO)
-&audmux {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_audmux_4>;
-	status = "okay";
-};
-#endif
 
 #ifdef CONFIG_EFUSA9_SPI_B
 /* SPI_B (3x CS) */
@@ -912,6 +903,12 @@
 #endif
 
 #ifdef CONFIG_EFUSA9_SGTL5000_AUDIO
+&audmux {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_audmux_4>;
+	status = "okay";
+};
+
 &ssi1 {
 	fsl,mode = "i2s-slave";
 	status = "okay";
@@ -1492,8 +1489,7 @@
 		};
 #endif /* CONFIG_EFUSA9_I2C_B */
 
-#if defined(CONFIG_EFUSA9_SGTL5000_AUDIO) || \
-	defined(CONFIG_EFUSA9_HDMI_AUDIO)
+#if defined(CONFIG_EFUSA9_SGTL5000_AUDIO)
 		pinctrl_audmux_4: audmux-4 {
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT20__AUD4_TXC	0x130b0
