Disable bus frequency scaling on fsimx6/sx/ul
For power savings, the regular i.MX6 code reduces the bus frequency to
24 MHz if no high speed accesses (e.g. by DMA) are in progress anymore.
However this requires that the DDR3 RAM supports DLL-OFF mode, or the
board will freeze in the moment the bus frequency is lowered. We can not
guarantee that all the RAMs we will use on our boards will be capable of
working in DLL-off mode. In fact some RAM types from Intelligent Memories
(IM) are already known to not work in DLL-OFF mode and we had this
freezing symptom.

Therefore this commit disables bus freqency scaling on all F&S boards
and modules based on i.MX6 by setting property "disable-scaling" in the
busfreq node of the device trees. To allow this, we need to add a
label to the busfreq node in imx6dl.dtsi, imx6sx.dtsi and imx6ul.dtsi.

Scaling down the bus frequency is only possible in configurations without
running display, USB and ETH anyway. As many projects will have at least
one of these devices active, the impact of this decision is rather small.
Only projects that do not use one of these devices (or maybe even more)
may suffer from a slightly higher power consumption.

Customers who need to take care of the power consumption should talk to
F&S to ensure that they always get RAM types that support DLL-OFF mode.
Then they can enable bus frequency scaling again in the device tree.

Bus frequency scaling can also be enabled at run-time with:

  echo 1 > /sys/devices/soc0/soc/soc:busfreq/enable

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -527,6 +527,12 @@
 	size = <CONFIG_ARMSTONEA9_CMA_SIZE>;
 };
 
+&busfreq {
+	/* Disable bus frequency scaling, because reducing bus frequency to
+	   24 MHz does not work with all types of DDR3 RAM */
+	disable-scaling;
+};
+
 /* if you want to use the pmic controller you have to set the arm-supply and
  * the soc-supply to the regulator of the pmic. Look pfuze comment.*/
 #if 0
