--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -131,6 +131,12 @@
 	size = <CONFIG_CUBE2_0_CMA_SIZE>;
 };
 
+&busfreq {
+	/* Disable bus frequency scaling, because reducing bus frequency to
+	   24 MHz does not work with all types of DDR3 RAM */
+	disable-scaling;
+};
+
 &cpu0 {
 	arm-supply = <&reg_arm>;
 	soc-supply = <&reg_soc>;
