--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -356,6 +356,12 @@ lvds_wvga {				\
 	size = <CONFIG_EFUSA9X_CMA_SIZE>;
 };
 
+&busfreq {
+	/* Disable bus frequency scaling, because reducing bus frequency to
+	   24 MHz does not work with all types of DDR3 RAM */
+	disable-scaling;
+};
+
 &adc1 {
 	vref-supply = <&reg_vref_3v3>;
 	num-channels = <2>;
