--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -428,6 +428,12 @@
 	size = <CONFIG_QBLISSA9R2_CMA_SIZE>;
 };
 
+&busfreq {
+	/* Disable bus frequency scaling, because reducing bus frequency to
+	   24 MHz does not work with all types of DDR3 RAM */
+	disable-scaling;
+};
+
 &clks {
 	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 			  <&clks IMX6QDL_CLK_SSI1_SEL>,
